--- a/views/contact.html
+++ b/views/contact.html
@@ -6,19 +6,20 @@
     <title>Hotel Booking Platform</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-dark header">
-        <a class="navbar-brand" href="#"><i class="fa-solid fa-hotel"></i> Hotel Booking Platform </a>
+        <a class="navbar-brand" href="index.html"><i class="fa-solid fa-hotel"></i> Hotel Booking Platform </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> Home </a>
+                    <a class="nav-link" href="/"> Home </a>
                 </li>
                 <li class="dis">
                     <a class="nav-link" href="#"> | </a>
@@ -30,7 +31,7 @@
                     <a class="nav-link" href="#"> | </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact"> Contact </a>
+                    <a class="nav-link" href="#"> Contact </a>
                 </li>
                 <li class="dis">
                     <a class="nav-link" href="#"> | </a>
@@ -42,50 +43,31 @@
         </div>
     </nav>
 
-   
-    <div class="container">
-        <img src="/images/homepage.webp" id="ig" alt="img"> 
-        <div class="card">Welcome to Hotel Booking Platform</div>
-        <div class="card2">Luxuries Hotels</div>
-    </div>
+    <div class="containerform">
+        <form method="POST" action="/contact">
+            <h3>Leave your contacts</h3>
+            <label for="fname">Firstname:</label><br>
+            <input type="text" id="fname" name="fname" placeholder="enter your name" class="w" required>
+            <p id="demo1"></p>
+            <hr>
 
-    <br><br>
-    <h3 id="cap">Latest Hotel deals</h3>
-    <div class="containerb">
-        <div class="cardb" id="1_1">
-            <img src="/images/1.jpg" alt="Burj Al Arab">
-            <h3>Burj Al Arab</h3>
-            <div class="card-content">
-                <p>Experience luxury at its finest in the iconic Burj Al Arab, where opulence meets unparalleled service.</p>
-                <p>Starting from $1,000 per night</p>
-                <p>Rating: ★★★★★</p>
-                <button type="button" class="button1">Book Now</button>
-                <button type="button" class="button2">Discover more</button>
-            </div>
-        </div> 
-        <div class="cardb" id="1_2">
-            <img src="/images/rixos.webp" alt="Rixos">
-            <h3>Rixos</h3>
-            <div class="card-content">
-                <p>Escape to the tranquil beauty of Burabay National Park at Rixos Borovoe. Amazing nature.</p>
-                <p>Starting from $250 per night</p>
-                <p>Rating: ★★★★☆</p>
-                <button type="button" class="button1">Book Now</button>
-                <button type="button" class="button2">Discover more</button>
-            </div>
-        </div>
-        <div class="cardb" id="1_3">
-            <img src="/images/ritz.avif" alt="Atlantis The Royal">
-            <h3>The Ritz Carlton</h3>
-            <div class="card-content">
-                <p>Experience the perfect blend of modern luxury and Kazakh heritage at The Ritz-Carlton, Almaty.</p>
-                <p>Starting from $350 per night</p>
-                <p>Rating: ★★★★★</p>
-                <button type="button" class="button1">Book Now</button>
-                <button type="button" class="button2">Discover more</button>
-            </div>
+            <label for="lname">Lastname:</label><br>
+            <input type="text" id="lname" name="lname" placeholder="enter your surname" class="w" required>
+            <p id="demo2"></p>
+            <hr>
 
-        </div> 
+            <label for="email">Email account:</label><br>
+            <input type="email" id="email" name="email" placeholder="enter your email address" class="w" required>
+            <p id="demo3"></p>
+            <hr>
+
+            <label for="comments">Send to us message:</label> <br>
+            <textarea id="comments" name="comments" placeholder="Leave your comment" class="w"></textarea><br>
+            <p id="demo4"></p>
+            <hr>
+            
+            <button type="submit" class="btn btn-dark" id="bt">Submit</button><br>
+        </form>
     </div>
 
     <div id="footer">
@@ -107,5 +89,7 @@
         <hr>
         <div class="a2"><p>All right reserved© | 2025</p></div>
     </div>
+
+    <script src="/validate.js"></script>
 </body>
 </html>
