--- a/views/hotels.html
+++ b/views/hotels.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style_for_post_get.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -18,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> Home </a>
+                    <a class="nav-link" href="/"> Home </a>
                 </li>
                 <li class="dis">
                     <a class="nav-link" href="#"> | </a>
@@ -36,56 +37,79 @@
                     <a class="nav-link" href="#"> | </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/hotels"> Hotels </a>
+                    <a class="nav-link" href="#"> Hotels </a>
                 </li>
             </ul>
         </div>
-    </nav>
+    </nav> 
 
-   
-    <div class="container">
-        <img src="/images/homepage.webp" id="ig" alt="img"> 
-        <div class="card">Welcome to Hotel Booking Platform</div>
-        <div class="card2">Luxuries Hotels</div>
+    <div class="displaying">    
+        <div id="filter">
+            <h2 id="filt">Filter</h2>
+            <form id="form">
+                Country
+                <input type="text" id="by_country">
+                Sort by price
+                <select id="by_price">
+                    <option></option>
+                    <option>Asceding</option>
+                    <option>Desceding</option>
+                </select>
+                Fields
+                <input type="text" id="fields">
+                Minimum price
+                <input type="number" name="minPrice" id="minp"> 
+                <button id="filter">Filter</button> 
+            </form>
+        </div>
+        <div id = "res1"> 
+            <div id="searching"><input type="text" id="for_search" placeholder="id:"><button id="for_search_2">Search</button></div>
+            <div id="result"></div> 
+        </div>
     </div>
 
-    <br><br>
-    <h3 id="cap">Latest Hotel deals</h3>
-    <div class="containerb">
-        <div class="cardb" id="1_1">
-            <img src="/images/1.jpg" alt="Burj Al Arab">
-            <h3>Burj Al Arab</h3>
-            <div class="card-content">
-                <p>Experience luxury at its finest in the iconic Burj Al Arab, where opulence meets unparalleled service.</p>
-                <p>Starting from $1,000 per night</p>
-                <p>Rating: ★★★★★</p>
-                <button type="button" class="button1">Book Now</button>
-                <button type="button" class="button2">Discover more</button>
-            </div>
-        </div> 
-        <div class="cardb" id="1_2">
-            <img src="/images/rixos.webp" alt="Rixos">
-            <h3>Rixos</h3>
-            <div class="card-content">
-                <p>Escape to the tranquil beauty of Burabay National Park at Rixos Borovoe. Amazing nature.</p>
-                <p>Starting from $250 per night</p>
-                <p>Rating: ★★★★☆</p>
-                <button type="button" class="button1">Book Now</button>
-                <button type="button" class="button2">Discover more</button>
-            </div>
-        </div>
-        <div class="cardb" id="1_3">
-            <img src="/images/ritz.avif" alt="Atlantis The Royal">
-            <h3>The Ritz Carlton</h3>
-            <div class="card-content">
-                <p>Experience the perfect blend of modern luxury and Kazakh heritage at The Ritz-Carlton, Almaty.</p>
-                <p>Starting from $350 per night</p>
-                <p>Rating: ★★★★★</p>
-                <button type="button" class="button1">Book Now</button>
-                <button type="button" class="button2">Discover more</button>
-            </div>
+    <div class="api">
+        <form id="creating">
+            <h4>Add hotel</h4>
+            <label>
+                Hotel name:<br>
+                <input type="text" id="name">
+            </label>
+            <label>
+                Price per night:<br>
+                <input type="number" id="price">
+            </label>
+            <label>
+                Country:<br>
+                <input type="text" id="country">
+            </label>
+            <button class="button_hotel">Create</button>
+        </form>
+   
+        <form id="updating">
+            <h4>Update hotel</h4>
+            <label>Hotel ID:<br>
+                <input type="text" id="update_id" required>
+            </label>
+            <label>New name:<br>
+                <input type="text" id="update_name">
+            </label>
+            <label>New price per night:<br>
+                <input type="number" id="update_price">
+            </label>
+            <label>New country:<br>
+                <input type="text" id="update_country">
+             </label>
+            <button class="button_hotel">Update</button>
+        </form>
 
-        </div> 
+        <form id="deleting">
+            <h4>Delete hotel</h4>
+            <label>Hotel id:<br>
+                <input type="text" id="delete_id">
+            </label>
+            <button class="button_hotel">Delete</button>
+        </form>
     </div>
 
     <div id="footer">
@@ -107,5 +131,7 @@
         <hr>
         <div class="a2"><p>All right reserved© | 2025</p></div>
     </div>
+
+<script src="/script.js"></script>
 </body>
 </html>
