--- a/views/about.html
+++ b/views/about.html
@@ -39,6 +39,16 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/hotels"> Hotels </a>
                 </li>
+                <li class="dis">
+                    <a class="nav-link" href="#"> | </a>
+                </li>
+                <li class="nav-item">
+                    <form action="/logout" method="POST" style="display:inline;">
+                        <button type="submit" class="nav-link btn btn-link" style="padding: 0; border: 1px solid black;border-radius: 5px; background: none; margin-top: 7px;padding: 3px; border-color: white;">
+                            <i class="fa-regular fa-user"></i> Logout
+                        </button>
+                    </form>
+                </li>
             </ul>
         </div>
     </nav>
