--- a/views/index.html
+++ b/views/index.html
@@ -38,54 +38,24 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/hotels"> Hotels </a>
                 </li>
+                <li class="dis">
+                    <a class="nav-link" href="#"> | </a>
+                </li>
+                <li class="nav-item">
+                    <form action="/logout" method="POST" style="display:inline;">
+                        <button type="submit" class="nav-link btn btn-link" style="padding: 0; border: 1px solid black;border-radius: 5px; background: none; margin-top: 7px;padding: 3px; border-color: white;">
+                            <i class="fa-regular fa-user"></i> Logout
+                        </button>
+                    </form>
+                </li>
             </ul>
         </div>
     </nav>
 
-   
     <div class="container">
         <img src="/images/homepage.webp" id="ig" alt="img"> 
         <div class="card">Welcome to Hotel Booking Platform</div>
         <div class="card2">Luxuries Hotels</div>
-    </div>
-
-    <br><br>
-    <h3 id="cap">Latest Hotel deals</h3>
-    <div class="containerb">
-        <div class="cardb" id="1_1">
-            <img src="/images/1.jpg" alt="Burj Al Arab">
-            <h3>Burj Al Arab</h3>
-            <div class="card-content">
-                <p>Experience luxury at its finest in the iconic Burj Al Arab, where opulence meets unparalleled service.</p>
-                <p>Starting from $1,000 per night</p>
-                <p>Rating: ★★★★★</p>
-                <button type="button" class="button1">Book Now</button>
-                <button type="button" class="button2">Discover more</button>
-            </div>
-        </div> 
-        <div class="cardb" id="1_2">
-            <img src="/images/rixos.webp" alt="Rixos">
-            <h3>Rixos</h3>
-            <div class="card-content">
-                <p>Escape to the tranquil beauty of Burabay National Park at Rixos Borovoe. Amazing nature.</p>
-                <p>Starting from $250 per night</p>
-                <p>Rating: ★★★★☆</p>
-                <button type="button" class="button1">Book Now</button>
-                <button type="button" class="button2">Discover more</button>
-            </div>
-        </div>
-        <div class="cardb" id="1_3">
-            <img src="/images/ritz.avif" alt="Atlantis The Royal">
-            <h3>The Ritz Carlton</h3>
-            <div class="card-content">
-                <p>Experience the perfect blend of modern luxury and Kazakh heritage at The Ritz-Carlton, Almaty.</p>
-                <p>Starting from $350 per night</p>
-                <p>Rating: ★★★★★</p>
-                <button type="button" class="button1">Book Now</button>
-                <button type="button" class="button2">Discover more</button>
-            </div>
-
-        </div> 
     </div>
 
     <div id="footer">
