--- a/views/hotels.html
+++ b/views/hotels.html
@@ -55,8 +55,10 @@
 
     <div class="displaying">    
         <div id="searching"><input type="text" id="for_search" placeholder="id or name:"><button id="for_search_2">Search</button></div>
-        <div id="result"></div> 
+        <div id="result"></div>
+        <button id="show_more">Show more</button>
     </div>
+
 
     <div class="api">
         <form id="creating">
