--- a/views/bookings.html
+++ b/views/bookings.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style_book.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -18,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> Home </a>
+                    <a class="nav-link" href="/"> Home </a>
                 </li>
                 <li class="dis">
                     <a class="nav-link" href="#"> | </a>
@@ -42,7 +43,7 @@
                     <a class="nav-link" href="#"> | </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/bookings"> Bookings </a>
+                    <a class="nav-link" href="#"> Bookings </a>
                 </li>
                 <li class="dis">
                     <a class="nav-link" href="#"> | </a>
@@ -58,11 +59,8 @@
         </div>
     </nav>
 
-    <div class="container">
-        <img src="/images/homepage.webp" id="ig" alt="img"> 
-        <div class="card">Welcome to Hotel Booking Platform</div>
-        <div class="card2">Luxuries Hotels</div>
-    </div>
+    <h1 id="prev">My Bookings</h1>
+    <div id="my_bookings"></div>
 
     <div id="footer">
         <div class="a1">
@@ -83,5 +81,7 @@
         <hr>
         <div class="a2"><p>All right reserved© | 2025</p></div>
     </div>
+
+    <script src="/js/bookings_show.js"></script>
 </body>
 </html>
