--- a/views/contact.html
+++ b/views/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
@@ -38,6 +38,12 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/hotels"> Hotels </a>
+                </li>
+                <li class="dis">
+                    <a class="nav-link" href="#"> | </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/bookings"> Bookings </a>
                 </li>
                 <li class="dis">
                     <a class="nav-link" href="#"> | </a>
@@ -100,6 +106,6 @@
         <div class="a2"><p>All right reserved© | 2025</p></div>
     </div>
 
-    <script src="/validate.js"></script>
+    <script src="/js/validate.js"></script>
 </body>
 </html>
