--- a/views/hotel_page.html
+++ b/views/hotel_page.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotel Booking Platform</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <meta charset="UTF-8" />
+  <title>Hotel details</title>
+  <link rel="stylesheet" href="/css/hotel_page.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark header">
+  <nav class="navbar navbar-expand-lg navbar-dark header">
         <a class="navbar-brand" href="#"><i class="fa-solid fa-hotel"></i> Hotel Booking Platform </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> Home </a>
+                    <a class="nav-link" href="/"> Home </a>
                 </li>
                 <li class="dis">
                     <a class="nav-link" href="#"> | </a>
@@ -58,13 +58,13 @@
         </div>
     </nav>
 
-    <div class="container">
-        <img src="/images/homepage.webp" id="ig" alt="img"> 
-        <div class="card">Welcome to Hotel Booking Platform</div>
-        <div class="card2">Luxuries Hotels</div>
+  
+    <div id="hotel_details" class="hotel-container">
+      <p>Loading hotel...</p>
     </div>
+  
 
-    <div id="footer">
+  <div id="footer">
         <div class="a1">
             <div>
                 <p>Contact info</p>
@@ -83,5 +83,7 @@
         <hr>
         <div class="a2"><p>All right reserved© | 2025</p></div>
     </div>
+
+  <script src="/js/script_bookings.js"></script>
 </body>
 </html>
