--- a/views/hotels.html
+++ b/views/hotels.html
@@ -6,8 +6,8 @@
     <title>Hotel Booking Platform</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/style_for_post_get.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style_for_post_get.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -43,6 +43,12 @@
                     <a class="nav-link" href="#"> | </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/bookings"> Bookings </a>
+                </li>
+                <li class="dis">
+                    <a class="nav-link" href="#"> | </a>
+                </li>
+                <li class="nav-item">
                     <form action="/logout" method="POST" style="display:inline;">
                         <button type="submit" class="nav-link btn btn-link" style="padding: 0; border: 1px solid black;border-radius: 5px; background: none; margin-top: 7px;padding: 3px; border-color: white;">
                             <i class="fa-regular fa-user"></i> Logout
@@ -57,6 +63,32 @@
         <div id="searching"><input type="text" id="for_search" placeholder="id or name:"><button id="for_search_2">Search</button></div>
         <div id="result"></div>
         <button id="show_more">Show more</button>
+    </div>
+
+    <div id="filters">
+        <label for="country_filter">Country:</label>
+        <input type="text" id="country_filter" placeholder="Enter country">
+
+        <label for="stars_filter">Stars:</label>
+        <select id="stars_filter">
+            <option value="">All</option>
+            <option value="7">7</option>
+            <option value="6">6</option>
+            <option value="5">5</option>
+            <option value="4">4</option>
+            <option value="3">3</option>
+            <option value="2">2</option>
+            <option value="1">1</option>
+        </select>
+
+        <label for="price_sort">Sort by price:</label>
+        <select id="price_sort">
+            <option value="">None</option>
+            <option value="asc">Ascending</option>
+            <option value="desc">Descending</option>
+        </select>
+
+        <button id="apply_filters">Apply</button>
     </div>
 
 
@@ -152,6 +184,6 @@
         <div class="a2"><p>All right reserved© | 2025</p></div>
     </div>
 
-<script src="/script.js"></script>
+<script src="/js/script.js"></script>
 </body>
 </html>
