--- a/views/register.html
+++ b/views/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Booking Platform</title>
-    <link rel="stylesheet" href="/Authorization.css">
+    <link rel="stylesheet" href="/css/Authorization.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
